--- a/rabbitmq/docker-compose-rabbitmq.yml
+++ b/rabbitmq/docker-compose-rabbitmq.yml
@@ -8,3 +8,9 @@ services:
     environment:
       - RABBITMQ_DEFAULT_USER=user
       - RABBITMQ_DEFAULT_PASS=password
+    networks:
+      - shared-network
+
+networks:
+  shared-network:
+    external: true
