Celery config updated

--- a/fastapi_notifications/src/.env.example
+++ b/fastapi_notifications/src/.env.example
@@ -10,6 +10,12 @@ REDIS_DB=notifications_cache
 REDIS_HOST=localhost
 REDIS_PORT=6379
 
+# rabbitmq
+RABBITMQ_USER=user
+RABBITMQ_PASSWORD=password
+RABBITMQ_HOST=localhost
+RABBITMQ_PORT=5672
+
 # nginx
 NGINX_PORT=80
 
