Ntf | Celery docker-compose added

--- a/fastapi_notifications/Dockerfile
+++ b/fastapi_notifications/Dockerfile
@@ -12,9 +12,10 @@ RUN apt-get update \
     && pip install --upgrade --no-cache-dir pip \
     && pip install --no-cache-dir -r requirements.txt
 
-COPY entrypoint.sh /
-RUN chmod +x /entrypoint.sh
+COPY entrypoint-fastapi.sh /
+RUN chmod +x /entrypoint-fastapi.sh
+
+COPY entrypoint-celery.sh /
+RUN chmod +x /entrypoint-celery.sh
 
 COPY ./src .
-
-ENTRYPOINT ["/entrypoint.sh"]
