Makefile app updated (sheduler worker launch)

--- a/fastapi_notifications/src/Makefile
+++ b/fastapi_notifications/src/Makefile
@@ -9,6 +9,9 @@ debug:
 debug_no_logger:
 	uvicorn main:app --host 0.0.0.0 --port 8006 --reload 
 
+scheduler:
+	celery -A main.scheduler_app worker --loglevel=INFO
+
 # # mypy
 # mypy:
 # 	mypy .
