--- a/fastapi_notifications/src/Makefile
+++ b/fastapi_notifications/src/Makefile
@@ -10,15 +10,17 @@ debug_no_logger:
 	uvicorn main:app --host 0.0.0.0 --port 8006 --reload 
 
 scheduler:
-	celery -A main.scheduler_app worker --loglevel=INFO
+	celery -A main.scheduler_app beat --loglevel=INFO
+# celery -A main.scheduler_app worker -B --loglevel=INFO
 # launch case 1
 sender:
 	celery -A main.sender_app worker -B --loglevel=INFO
 # launch case 2
-sender-scheduler:
-	celery -A main.sender_app beat --loglevel=INFO
+sender-beat:
+	celery -A celery_app.sender.sender_app beat --loglevel=INFO
 sender-worker:
-	celery -A main.sender_app worker --loglevel=INFO
+	celery -A celery_app.sender.sender_app worker --loglevel=INFO
+	
 
 # # mypy
 # mypy:
@@ -26,3 +28,4 @@ sender-worker:
 
 # mypy-service:
 # 	mypy . --exclude tests/functional
+
