Celery app redesigned

--- a/fastapi_notifications/src/Makefile
+++ b/fastapi_notifications/src/Makefile
@@ -9,18 +9,12 @@ debug:
 debug_no_logger:
 	uvicorn main:app --host 0.0.0.0 --port 8006 --reload 
 
-scheduler:
-	celery -A main.scheduler_app beat --loglevel=INFO
-# celery -A main.scheduler_app worker -B --loglevel=INFO
-# launch case 1
-sender:
-	celery -A main.sender_app worker -B --loglevel=INFO
-# launch case 2
-sender-beat:
-	celery -A celery_app.sender.sender_app beat --loglevel=INFO
-sender-worker:
-	celery -A celery_app.sender.sender_app worker --loglevel=INFO
-	
+
+celery-beat:
+	celery -A main.celery_app beat --loglevel=INFO
+celery-worker:
+	celery -A main.celery_app worker --loglevel=INFO
+
 
 # # mypy
 # mypy:
