API tests added

--- a/fastapi_notifications/src/tests/docker-compose.yml
+++ b/fastapi_notifications/src/tests/docker-compose.yml
@@ -1,27 +1,25 @@
-# fastapi notifications service
-name: notifications
+name: test-notifications-api
 
 services:
   notifications-db:
     image: postgres:16
-    container_name: ${POSTGRES_DB}
+    container_name: notifications_db
     env_file:
-      - ./.env
+      - ../../.env
     volumes:
       - notifications-database:/var/lib/postgresql/data
     expose:
-      - ${POSTGRES_PORT}
-    restart: always
+      - 5432
     networks:
       - shared-network
 
   notifications-cache:
     image: redis
-    container_name: ${REDIS_DB}
+    container_name: notifications_cache
     env_file:
-      - ./.env
+      - ../../.env
     expose:
-      - ${REDIS_PORT}
+      - 6379
     volumes:
       - notifications-rds-data:/data
       - notifications.redis.conf:/usr/local/etc/redis/redis.conf
@@ -29,51 +27,59 @@ services:
     networks:
       - shared-network
 
-  notifications-nginx:
+  nginx:
     image: nginx:alpine3.18
-    container_name: nginx
-    ports:
-      - ${SERVICE_PORT}:${NGINX_PORT}
+    expose:
+      - 80
     volumes:
-      - ./data/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./data/nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf
+      - ../../data/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ../../data/nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf
     networks:
       - shared-network
 
   notifications-service:
-    build: .
+    build: ../../.
     container_name: notifications_service
     command: /entrypoint-fastapi.sh
     expose:
       - 8000
     env_file:
-      - .env
+      - ../../.env
     depends_on:
       - notifications-db
       - notifications-cache
-      - notifications-nginx
+      - nginx
     networks:
       - shared-network
 
   worker-celery:
-    build: .
+    build: ../../.
     container_name: celery_worker
     command: [ "celery", "-A", "main.celery_app", "worker", "--loglevel=INFO" ]
     env_file:
-      - .env
+      - ../../.env
     depends_on:
       - notifications-service
     networks:
       - shared-network
 
   beat-celery:
-    build: .
+    build: ../../.
     container_name: celery_beat
     command: [ "celery", "-A", "main.celery_app", "beat", "--loglevel=INFO" ]
     env_file:
-      - .env
+      - ../../.env
     depends_on:
       - worker-celery
+    networks:
+      - shared-network
+
+  test_service:
+    build: .
+    container_name: tests
+    depends_on:
+      - beat-celery
+    env_file: .env
     networks:
       - shared-network
 
