--- a/fastapi_auth/Dockerfile
+++ b/fastapi_auth/Dockerfile
@@ -9,6 +9,7 @@ COPY requirements.txt .
 
 RUN apt-get update \
     && apt-get install -y netcat-openbsd \
+    && apt-get install -y postgresql-client \
     && pip install --upgrade --no-cache-dir pip \
     && pip install --no-cache-dir -r requirements.txt
 
