--- a/fastapi_notifications/.env.example
+++ b/fastapi_notifications/.env.example
@@ -21,3 +21,9 @@ NGINX_PORT=80
 
 # service
 SERVICE_PORT=8006
+
+# events generator script
+GENERATE_EVENTS=False
+
+URL_AUTH_LOGIN=http://auth-service:8000/api/v1/auth/login
+URL_AUTH_USERS=http://auth-service:8000/api/v1/admin/users
