--- a/fastapi_notifications/src/.env.example
+++ b/fastapi_notifications/src/.env.example
@@ -24,3 +24,6 @@ SERVICE_PORT=8006
 
 # events generator script
 GENERATE_EVENTS=True
+
+URL_AUTH_LOGIN=http://localhost:8001/api/v1/auth/login
+URL_AUTH_USERS=http://localhost:8001/api/v1/admin/users
