--- a/fastapi_notifications/.env.example
+++ b/fastapi_notifications/.env.example
@@ -27,3 +27,10 @@ GENERATE_EVENTS=False
 
 URL_AUTH_LOGIN=http://auth-service:8000/api/v1/auth/login
 URL_AUTH_USERS=http://auth-service:8000/api/v1/admin/users
+
+# smtp yandex
+SMTP_LOGIN=YOUR_LOGIN
+SMTP_PASSWORD=YOUR_PASSWORD
+SMTP_DOMAIN=yandex.ru
+SMTP_HOST=smtp.yandex.ru
+SMTP_PORT=465
