--- a/fastapi_notifications/src/.env.example
+++ b/fastapi_notifications/src/.env.example
@@ -27,3 +27,10 @@ GENERATE_EVENTS=True
 
 URL_AUTH_LOGIN=http://localhost:8001/api/v1/auth/login
 URL_AUTH_USERS=http://localhost:8001/api/v1/admin/users
+
+# smtp yandex
+SMTP_LOGIN=YOUR_LOGIN
+SMTP_PASSWORD=YOUR_PASSWORD
+SMTP_DOMAIN=yandex.ru
+SMTP_HOST=smtp.yandex.ru
+SMTP_PORT=465
