notifications api | auth added

--- a/fastapi_notifications/.env.example
+++ b/fastapi_notifications/.env.example
@@ -28,6 +28,10 @@ GENERATE_EVENTS=False
 URL_AUTH_LOGIN=http://auth-service:8000/api/v1/auth/login
 URL_AUTH_USERS=http://auth-service:8000/api/v1/admin/users
 
+# auth
+AUTH_SECRET_KEY=gPaFf9ldf-8lgUFePhe
+AUTH_ALGORITHM=HS256
+
 # smtp yandex
 SMTP_LOGIN=YOUR_LOGIN
 SMTP_PASSWORD=YOUR_PASSWORD
