--- a/fastapi_notifications/src/tests/.env.example
+++ b/fastapi_notifications/src/tests/.env.example
@@ -1,3 +1,7 @@
 SERVICE_SCHEMA=http://
 SERVICE_HOST=nginx
 SERVICE_PORT=80
+
+# token secret
+JWT_SECRET_KEY=gPaFf9ldf-8lgUFePhe
+JWT_ALGORITHM=HS256
