--- a/fastapi_notifications/src/.env.example
+++ b/fastapi_notifications/src/.env.example
@@ -28,6 +28,10 @@ GENERATE_EVENTS=True
 URL_AUTH_LOGIN=http://localhost:8001/api/v1/auth/login
 URL_AUTH_USERS=http://localhost:8001/api/v1/admin/users
 
+# auth
+AUTH_SECRET_KEY=gPaFf9ldf-8lgUFePhe
+AUTH_ALGORITHM=HS256
+
 # smtp yandex
 SMTP_LOGIN=YOUR_LOGIN
 SMTP_PASSWORD=YOUR_PASSWORD
